# Xarph

./: .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  Cargo.toml  PKGBUILD  PROJECT_SUMMARY.md  README.md  install-manual.sh  rules.md  setup.sh  xarph-build.sh  xarph-install.sh  xarph-reinstall.sh  xarph-setup.sh  xarph-test.sh  xarph-uninstall.sh
Xarhives/: Cargo.toml  build.rs
Xarhives/qml/: main.qml
Xarhives/src/: main.rs
Xarhives/src/bridges/: file_browser_bridge.rs  mod.rs
Xarph-Specification/: 00-overview.md  01-architecture.md  02-development-model.md  03-distribution.md  04-desktop-experience.md  05-sdk.md  06-development-ai-policy.md  07-gaming.md  08-linux-integration.md  09-roadmap.md
Xgit/: README.md  xgit.sh
Xgit/config/: defaults.sh
Xgit/lib/: git.sh  safety.sh  ui.sh  utils.sh
config/daemon/: settings.json
config/hyprland/: hyprland.conf  keybinds.conf  vars.conf
config/session/: x4-shell-session  x4-shell.desktop
config/systemd/: x4-shell-daemon.service
daemon/src/: main.rs
daemon/src/adapters/: hyprland.rs  mod.rs
daemon/src/core/: events.rs  traits.rs  types.rs
daemon/src/ipc/: server.rs
daemon/src/ipc/interfaces/: v1.rs
daemon/src/services/: mod.rs  workspace.rs
daemon/src/utils/: mod.rs
data/conf/: shell.conf
data/conf/panels/: left.conf  top.conf
data/sessions/: xarph.desktop
docs/: architecture.es.md  architecture.md  configuration.md  installation.es.md  installation.md  maintenance.md
pkg/xarph-desktop/: .BUILDINFO  .MTREE  .PKGINFO
pkg/xarph-desktop/usr/lib/systemd/user/: xarph-session.target  xarph-shell.service  xarph-wm-shutdown.target  xarph-wm.service
pkg/xarph-desktop/usr/share/wayland-sessions/: xarph.desktop
pkg/xarph-desktop/usr/share/xdg-desktop-portal/: xarph-portals.conf
ui/: main.qml
ui/components/: SystemIndicators.qml  WorkspaceList.qml
ui/panels/: Sidebar.qml
ui/services/: ConfigService.qml  SystemService.qml  WorkspaceService.qml
ui/utils/: Helpers.qml
x4-shell-manager/: Cargo.toml
x4-shell-manager/src/: main.rs
x4-shell-manager/src/arch/: mod.rs
x4-shell-manager/src/cli/: mod.rs
x4-shell-manager/src/commands/: install.rs  mod.rs  repair.rs  status.rs  uninstall.rs  update.rs
x4-shell-manager/src/config/: mod.rs
x4-shell-manager/src/filesystem/: atomic.rs  mod.rs  paths.rs
x4-shell-manager/src/session/: mod.rs
x4-shell-manager/src/systemd/: mod.rs
x4-shell-ui/: qmldir
x4-shell-ui/components/: Clock.qml  SystemIcon.qml
x4-shell-ui/layouts/: README.md
x4-shell-ui/services/: SystemService.qml  TimeService.qml  WorkspaceService.qml
x4-shell-ui/themes/: DefaultTheme.qml
x4shell-daemon/: Cargo.toml
x4shell-daemon/src/: main.rs
x4shell-daemon/src/adapters/: system.rs
x4shell-daemon/src/core/: mod.rs  state.rs
x4shell-daemon/src/ipc/: mod.rs  server.rs
x4shell-daemon/src/ipc/interfaces/: v1.rs
x4shell-daemon/src/services/: window.rs  workspace.rs
xarph-admin/: Cargo.toml  build.rs
xarph-admin/qml/: main.qml
xarph-admin/src/: main.rs
xarph-admin/src/bridges/: mod.rs  process_bridge.rs
xarph-lock/: .gitignore  Cargo.toml
xarph-lock/src/: main.rs
xarph-network/: Cargo.toml  build.rs
xarph-network/qml/: main.qml
xarph-network/src/: main.rs
xarph-network/src/bridges/: network_bridge.rs
xarph-process-admin/: Cargo.toml
xarph-process-admin/src/: main.rs
xarph-sdk/: Cargo.toml  README.md
xarph-sdk/src/: action.rs  app_registry.rs  clock_service.rs  config.rs  context_menu.rs  desktop_object.rs  desktop_registry.rs  lib.rs  network_monitor.rs  notification_service.rs  position.rs  process_collector.rs  protocol.rs  service_manager.rs  settings_model.rs  socket.rs  state.rs  toggle.rs  types.rs  wallpaper_engine.rs
xarph-sdk/src/compat/: mod.rs  output.rs  window.rs  workspace.rs
xarph-services/: Cargo.toml  build.rs
xarph-services/qml/: main.qml
xarph-services/src/: main.rs
xarph-services/src/bridges/: mod.rs  service_bridge.rs
xarph-settings/: Cargo.toml  build.rs
xarph-settings/qml/: main.qml
xarph-settings/src/: main.rs  wallpaper_gallery.rs  wallpaper_settings.rs
xarph-settings/src/bridges/: mod.rs  settings_bridge.rs
xarph-shell/: Cargo.toml  build.rs  resources.qrc  test_channel.rs
xarph-shell/qml/: ClockWidget.qml  ContextMenu.qml  Desktop.qml  DesktopObject.qml  Panel.qml  StartButton.qml  StartMenu.qml  TrayWidget.qml  WallpaperLayer.qml  WorkspaceWidget.qml  main.qml
xarph-shell/src/: app.rs  cli.rs  main.rs  panel.rs  recent_apps.rs  start_menu.rs  style.css  toggle_service.rs
xarph-shell/src/backend/: layer.rs  mod.rs  windowed.rs
xarph-shell/src/backends/: layer.rs  mod.rs  windowed.rs
xarph-shell/src/bridges/: clock_bridge.rs  context_menu_bridge.rs  desktop_bridge.rs  mod.rs  notification_bridge.rs  panel_bridge.rs  start_menu_bridge.rs  tray_bridge.rs  wallpaper_bridge.rs  workspace_bridge.rs
xarph-shell/src/desktop/: mod.rs  wallpaper.rs
xarph-shell/src/desktop/objects/: application.rs  context_menu.rs  drag.rs  file_object.rs  folder.rs  mod.rs  persistence.rs  project.rs  shortcut.rs  widget_object.rs
xarph-shell/src/widgets/: clock.rs  mod.rs  network.rs  start_button.rs  system.rs  tray.rs  workspace.rs
xarph-wm/: Cargo.toml
xarph-wm/niri-config/: Cargo.toml
xarph-wm/niri-config/src/: .lib.rs.pending-snap  binds.rs  lib.rs
xarph-wm/niri-visual-tests/: Cargo.toml
xarph-wm/resources/: default-config.kdl  xarph-session
xarph-wm/src/: cli.rs  main.rs  niri.rs
xarph-wm/src/backend/: headless.rs  mod.rs  tty.rs  winit.rs
xarph-wm/src/handlers/: mod.rs  xdg_shell.rs
xarph-wm/src/input/: mod.rs
xarph-wm/src/ipc/: client.rs  server.rs
xarph-wm/src/layer/: mapped.rs  mod.rs
xarph-wm/src/layout/: mod.rs
xarph-wm/src/tests/: animations.rs  fixture.rs
xgit/: xgit.sh
xgit/config/: defaults.sh
xgit/lib/: git.sh  safety.sh  ui.sh  utils.sh
