[workspace]
members = [
    "xarph-settings",
    "Xarhives",
    "xarph-sdk",
    "xarph-lock",
    "xarph-admin",
    "xarph-services",
    "xarph-network",
    "xarph-shell",
    "xarph-wm",
    "xarph-wm/niri-config",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
description = "Xarph Desktop Environment"
authors = ["Xarph Contributors"]
license = "GPL-3.0-or-later"
edition = "2021"
repository = "https://github.com/xarph/xarph"

[workspace.dependencies]
niri-ipc = { package = "xarph-sdk", path = "xarph-sdk" }
anyhow = "1.0.102"
bitflags = "2.11.1"
clap = { version = "4.6.1", features = ["derive"] }
insta = "1.47.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = { version = "0.1.44", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracy-client = { version = "0.18.4", default-features = false }
cxx-qt = { version = "0.8", features = ["qt_gui"] }
cxx-qt-build = "0.8"
freedesktop-desktop-entry = "0.8"
sysinfo = "0.39"
dirs = "6.0"
uuid = { version = "1.10", features = ["v4"] }
tokio = { version = "1.52", features = ["rt", "macros", "rt-multi-thread", "time", "net"] }
async-channel = "2"
zbus = { version = "5.12", features = ["blocking"] }
notify = "8.2"

[workspace.dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
rev = "ff5fa7df392cecfba049ffed55cdaa4e98a8e7ef"
default-features = false

[workspace.dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay.git"
rev = "ff5fa7df392cecfba049ffed55cdaa4e98a8e7ef"

[workspace.lints.clippy]
new_without_default = "allow"
collapsible_match = "allow"

[profile.release]
debug = "line-tables-only"
overflow-checks = true
lto = "thin"

[profile.release.package.niri-config]
debug = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
