[package]
name = "x4-shell-manager"
version = "0.1.0"
edition = "2021"
description = "Installer/manager CLI for x4-shell (Hyprland-based Wayland shell)"
authors = ["X4Yi"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs-err = "2.11"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
once_cell = "1.19"
which = "4.4"
rpassword = "7.0"
dialoguer = "0.11"
