[package]
name = "x4shell-daemon"
version = "0.1.0"
edition = "2021"
description = "X4Shell backend daemon for Hyprland"
authors = ["X4Yi"]
license = "MIT"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
zbus = { version = "4.0", default-features = false, features = ["tokio"] }
async-trait = "0.1.80"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arc-swap = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
once_cell = "1.19"
tokio-stream = "0.1"
futures = "0.3"
