[package]
name = "xarph-admin"
version = "0.2.0"
edition = "2021"
description = "Xarph Admin - Qt6/QML Process Manager"

[dependencies]
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml"] }
xarph-sdk = { path = "../xarph-sdk" }
libc = "0.2"

[build-dependencies]
cxx-qt-build = "0.8"
