[package]
name = "xarph-sdk"
version = "0.2.0"
authors = ["Xarph Contributors"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "Xarph SDK - Shared core for the entire Xarph ecosystem"

[dependencies]
clap = { version = "4.0", optional = true }
dirs = "6.0.0"
notify = "8.2.0"
schemars = { version = "1.2.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
uuid = { version = "1.10", features = ["v4"] }
freedesktop-desktop-entry = "0.8"
libc = "0.2"
tracing.workspace = true

[features]
default = []
clap = ["dep:clap"]
json-schema = ["dep:schemars"]
