[package]
name = "xarph-services"
version = "0.2.0"
edition = "2021"
description = "Xarph Services - Qt6/QML Service Manager"

[dependencies]
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml"] }
xarph-sdk = { path = "../xarph-sdk" }

[build-dependencies]
cxx-qt-build = "0.8"
