[package]
name = "xarph-settings"
version = "0.2.0"
edition = "2021"
description = "Xarph Settings - Qt6/QML Settings Application"

[dependencies]
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml"] }
xarph-sdk = { path = "../xarph-sdk" }
dirs = "6.0"
serde_json = "1.0"

[build-dependencies]
cxx-qt-build = "0.8"
