[package]
name = "xarph-shell"
version = "0.2.0"
edition = "2024"

[dependencies]
async-channel = "2"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0"
gio = "0.19"
gtk4 = { version = "0.11.3", features = ["v4_10"] }
gtk4-layer-shell = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }
xarph-sdk = { path = "../xarph-sdk" }
zbus = { version = "5.12", features = ["blocking"] }
