[package]
name = "xarph-shell"
version = "0.2.0"
edition = "2021"
description = "Xarph Shell - Qt6/QML Desktop Shell"

[dependencies]
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml"] }
xarph-sdk = { path = "../xarph-sdk" }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0"

[build-dependencies]
cxx-qt-build = "0.8"
